...
                                <connections>
                                    <outlet property="delegate" destination="Rcd-3Y-KxL" id="dWc-ix-NJR"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="nav_back_button_whith" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xVd-Jb-EaK" userLabel="nav_back_button_whith">
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav_back_button_white"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="ruh-10-2vZ"/>
                                    <constraint firstAttribute="height" constant="48" id="tSH-2o-Jw9"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="nav_back_button_white"/>
...
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo_of_unsplash" translatesAutoresizingMaskIntoConstraints="NO" id="Nzl-fj-NbN" userLabel="logo_of_unsplash">
                                <rect key="frame" x="166.66666666666666" y="403" width="60" height="60"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Authenticate" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="N1N-6W-Sfm" userLabel="Enter Button">
                                <rect key="frame" x="16" y="667" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White (IOS)"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="Bnt-xG-Pdw"/>
                                </constraints>
...
            <objects>
                <viewController storyboardIdentifier="WebViewViewController" id="7OC-tm-4EY" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="x7J-Yl-A4Y">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" restorationIdentifier="UnsplashWebView" translatesAutoresizingMaskIntoConstraints="NO" id="YK9-pX-TWE">
                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                <color key="backgroundColor" name="YP White (IOS)"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
...
